# VelocityUI

./: package.json
resources/: Index.html
resources/Assets/RobloxMaterials/: manifest.json
resources/Css/Components/: Components.css
resources/Css/Global/: Enhancements.css
resources/Css/Layout/: Layout.css
resources/Js/Bootstrap/: Main.js
resources/Js/Controllers/: AppController.js  EditorController.js  PanelController.js  WorkspaceController.js
resources/Js/Core/: FileManager.js  Persist.js  State.js  UiState.js  UpdateChecker.js  WorkspaceHistory.js
resources/Js/Features/: AiHelper.js
resources/Js/Overlays/: Toast.js
resources/Js/Ui/: ContextMenu.js  Tabs.js
resources/Js/Ui/Autoexec/: Autoexec.js
resources/Js/Ui/Cloud/: Cloud.js
resources/Js/Ui/DataTree/: DataTree.js  DataTreeMaterials.js  DataTreeMath.js  DataTreeMeshCodec.js  DataTreeStudioProperties.js
resources/Js/Ui/Editor/: EditorCommands.js  EditorModels.js  EditorMount.js  Index.js
resources/Js/Ui/Explorer/: ExplorerDnd.js  ExplorerOps.js  ExplorerTree.js  VirtualList.js
resources/Js/Ui/LangSupport/: LangMap.js  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  console.rs  datatree.rs  file_system.rs  io.rs  mod.rs  seed.rs  update.rs  viewport.rs  window.rs
src-tauri/src/managers/file_system/: mod.rs  tree.rs  watcher.rs
src-tauri/src/managers/update/: mod.rs
src-tauri/src/models/: file_system.rs  persistence.rs  update.rs
src-tauri/src/viewport/: mod.rs  protocol.rs  summary.rs
(+1 files in other folders)
