[package]
name = "velocityui"
version = "1.2.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
notify = "6"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "json", "rustls-tls", "zstd"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"
zip = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png"] }
flate2 = "1"
semver = "1"
keyring = { version = "3", features = ["apple-native"] }
quick-xml = "0.38.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSResponder", "NSApplication"] }
objc2-foundation = { version = "0.3.2", features = ["NSObject"] }
